Fix background on dark mode extensions

--- a/foundations/landing-page/style.css
+++ b/foundations/landing-page/style.css
@@ -81,6 +81,7 @@ button {
 }
 
 .info {
+    background-color: #fff;
     padding: 50px 0 120px;
 }
 
@@ -154,6 +155,7 @@ img {
 }
 
 .sign-up {
+    background-color: #fff;
     padding: 100px 0;
     display: flex;
     justify-content: center;
